# aegis-input

./: .clippy.toml  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Cross.toml  README.md  package-lock.json  package.json  rustfmt.toml
.cargo/: config.toml
.github/workflows/: build-static.yml  ci.yml  release-optimized.yml  release.yml
.specify/memory/: constitution.md
.specify/templates/: agent-file-template.md  checklist-template.md  constitution-template.md  plan-template.md  spec-template.md  tasks-template.md
docs/: GITHUB_ACTIONS_BEST_PRACTICES.md  INSTALLATION.md  PROJECT_STRUCTURE.md  README.md  RELEASE.md  TROUBLESHOOTING.md  dev.md  implementation.md  performance-budget.md  static-linking-guide.md  static-linking-quickstart.md
install/linux/: aegis-input.service  install.sh  uninstall.sh
install/macos/: README.md
install/remote/: install.sh  uninstall.sh
install/windows/: README.md
scripts/: build-static.sh  optimize-binary.sh  tag-release.sh  verify-static.sh
specs/001-linux-input-disable/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-quick-install/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-one-click-distribution/: COMPLETE_REPORT.md  IMPLEMENTATION_SUMMARY.txt  TEST_REPORT.md  constitution-check-post-design.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-interactive-detection/: COMPLETION_REPORT.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: config.rs  lib.rs  main.rs
src/cli/: config.rs  detect.rs  main.rs  mod.rs
tests/: contract.rs  integration.rs
(+67 files in other folders)
