[package]
name = "aegis-input"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
udev = "0.7"
evdev = "0.12"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
