[package]
name = "aegis-input"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
udev = "0.7"
evdev = "0.12"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
which = "6"
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

# 发布配置优化 - 静态链接和二进制大小优化
[profile.release]
opt-level = "z"        # 优化大小而非速度
lto = true            # 启用链接时优化
codegen-units = 1     # 更好的优化（但编译更慢）
strip = true          # 自动移除符号表
panic = "abort"       # 减小二进制大小（移除 unwind 表）
